VR: Use layouts for hint text

The original URL bar hint text was drawn over the URL bar without being
a member of the URL bar's layout.  This is fragile, and broke.  Now it's
simpler and less fragile.

Do a bit of URL state cleanup as well.

BUG=831646
R=tiborg

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I1846d6bee11363ff87c846aca9a4e4ef99430fda
Reviewed-on: https://chromium-review.googlesource.com/1008125
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549952}
Former-commit-id: 282cdeeb8baa5b52823ee0ea0cc045cba31e34e1