chrome/browser/vr/elements/ui_element_name.h
@@ -54,6 +54,7 @@ enum UiElementName {
   kUrlBarOriginLayout,
   kUrlBarOriginRegion,
   kUrlBarUrlText,
+  kUrlBarHintLayout,
   kUrlBarHintText,
   kUrlBarOverflowButton,
   kOverflowMenuBackplane,
